# csca-5632-unsupervised-learning

./: README  README.md  pyproject.toml  wholesale-customers-segmentation.ipynb
