[project]
name = "csca-5632-unsupervised-learning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
